--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     }
   },
   "require": {
-    "vlucas/valitron": "^1.4"
+    "vlucas/valitron": "^1.4",
+    "swiftmailer/swiftmailer": "^6.0"
+
 
   }
 }
